@@ -37,8 +37,7 @@
     href=&quot;http://epsonepl.sourceforge.net/&quot;&gt;driver&lt;/a&gt;;
     based on reverse-engineering of the printer&apos;s protocol.&lt;p&gt;
 
-    Printing through the parallel port works, for USB is also reported
-    that it works.&lt;p&gt;
+    Printing works through both the parallel and USB port.&lt;p&gt;
 
     </en>
   </comments>
