@@ -39,7 +39,7 @@
 
     The printer has parallel and USB connectors.&lt;p&gt;
 
-    This printer probably works with this driver but was not tested
+    This printer probably works with this driver but was not fully tested
     yet. Any test report is welcome.&lt;p&gt;
 
     </en>
